# pairwise-winrate-verifiers

./: .gitignore  complexity.py  ngram-filter.py  ngram.txt  pyproject.toml  rubric.md
docs/source/: environments.md  training.md
environments/_backup_polar_rft/: polar_rft.py  pyproject.toml
environments/pairwise_winrate/: README.md  pairwise_winrate.py  pyproject.toml
environments/polar_rft/: polar_rft.py
environments/sharegpt_polar/: sharegpt_polar.py
examples/eval/: eval_vs_baseline.py
examples/grpo/: train_pairwise_winrate.py  train_polar_rft.py
examples/grpo/configs/: polar_rft.toml
verifiers/: __init__.py
verifiers/envs/: environment.py  multiturn_env.py  singleturn_env.py
verifiers/rubrics/: pairwise_winrate_rubric.py  weighted_rubric_deviation.py
verifiers/trainers/: async_batch_generator.py  grpo_config.py  grpo_trainer.py
working_bundle/environments/pairwise_winrate/: pairwise_winrate.py
working_bundle/examples/grpo/: train_pairwise_winrate.py
working_bundle/verifiers/rubrics/: pairwise_winrate_rubric.py
